<resources>
    <string name="app_name">Blog App</string>
    <string name="email_hint">Email</string>
    <string name="pass_hint">Password</string>
    <string name="Login_Logo_Des" />
    <string name="login_btn_text">Login to Account</string>
    <string name="login_reg_btn_text">Need a New Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create New Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_confirm_pass_text">Confirm Password</string>
    <string name="reg_pass_text">Password</string>
    <string name="setup_name_hint">Enter a Username</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description...</string>
    <string name="new_post_btn_text">Post</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notification</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
